# Collaptz

./: .gitignore  Cargo.toml  README.md  pyproject.toml
collatz-api/: .dockerignore  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  requirements.in  requirements.txt  setup.cfg
collatz-api/app/: __main__.py  settings.py
collatz-api/app/dependencies/: __init__.py  event_loop.py  http_client.py  logger.py  repos.py  services.py
collatz-api/app/infrastructure/db/: core.py  metadata.py
collatz-api/app/infrastructure/db/models/: collatz.py
collatz-api/app/infrastructure/db/repos/: collatz.py
collatz-api/app/infrastructure/web/: setup.py
collatz-api/app/infrastructure/web/endpoints/metrics/: health.py
collatz-api/app/infrastructure/web/endpoints/public/: collatz.py
collatz-api/app/usecases/interfaces/repos/: collatz.py
collatz-api/app/usecases/interfaces/services/: example_manager.py
collatz-api/app/usecases/schemas/: collatz.py  example.py
collatz-api/app/usecases/services/: example_manager.py
collatz-api/migrations/: env.py
collatz-api/migrations/versions/: 0001_initial_schema.py
collatz-risc0/examples/: Cargo.toml
collatz-risc0/examples/collatz/: Cargo.toml
collatz-risc0/examples/collatz/methods/guest/: Cargo.toml
collatz-risc0/examples/collatz/methods/guest/src/: main.rs
collatz-risc0/examples/collatz/src/: lib.rs  main.rs
collatz-risc0/examples/collatz/tests/: integration_test.rs
collatz-risc0/examples/factors/src/: main.rs
examples/collatz/: Cargo.toml
examples/collatz/methods/: Cargo.toml
examples/collatz/src/: NOTES.md  main.rs
frontend/: __init__.py  collatz_viz.py  dashboard.py
methods/: Cargo.toml
methods/guest/src/: main.rs
src/: db.rs  lib.rs  main.rs
verifier/: Cargo.toml
verifier/src/: main.rs
