# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "collatz"
version = "0.0.1"
requires-python = ">=3.7"
dependencies = [
    'plotly',
    'pandas',
    'dash',
    'requests',
    'typing_extensions',
]