[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0", branch = "release-0.15" }
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"